--- a/css/styles.css
+++ b/css/styles.css
@@ -70,3 +70,64 @@ footer{
     padding-top: 20px;
     padding-bottom: 20px;
 }
+
+.navbar {
+    background-color: #d5cfbf;
+}
+
+.content-contact{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url('../images/fondo.jpg');
+    padding-top: 20px;
+    background-position: center;
+    background-repeat: no-repeat; /* Evita la repetición de la imagen */
+    margin: 0;
+    padding: 0;
+    background-color: black;
+    color: #efebdc;
+}
+.formulario{
+    height:80%;
+    background-color: #d5cfbf;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: black;
+}
+
+.form-control{
+    background-color: #efebdc;
+}
+
+form {
+  padding: 20px;
+}
+
+.info-contact {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+  }
+
+  .info-contact .address,
+  .info-contact .phones,
+  .info-contact .email {
+    flex: 1;
+    margin-right: 30px;
+  }
+
+  .info-contact h4{
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+  }
+
+  .info-contact p {
+    font-size: 15px;
+    text-align: center;
+  }
