--- a/views/contact_us.html
+++ b/views/contact_us.html
@@ -7,12 +7,13 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/styles.css">
   <title>Document</title>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
       <a class="navbar-brand ms-4" href="../index.html">
         Ney's Pasta Place
@@ -27,24 +28,64 @@
             <a class="nav-link" href="../index.html">Home</a>
           </li>
           <li class="nav-item me-5">
-            <a class="nav-link active" href="./menu.html">Menu</a>
+            <a class="nav-link" href="./menu.html">Menu</a>
           </li>
           <li class="nav-item me-5">
-            <a class="nav-link" href="./contact_us.html">Contact us</a>
+            <a class="nav-link active" href="./contact_us.html">Contact us</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-  Contact
+  <div class="container-fluid content-contact col-md-12">
+    <h1>Contact Us</h1>
+    <div class="formulario rounded-3 col-md-4">
+      <form>
+        <div class="mb-12">
+          <label for="name" class="form-label">Nombres</label>
+          <input type="text" class="form-control" id="name">
+        </div>
+        <div class="mb-12">
+          <label for="email" class="form-label">Email</label>
+          <input type="email" class="form-control" id="email">
+        </div>
+        <div class="mb-12">
+          <label for="phone" class="form-label">Telefono</label>
+          <input type="text" class="form-control" id="phone">
+        </div>
+        <div class="mb-12">
+          <label for="message" class="form-label">Mensaje</label>
+          <textarea class="form-control" rows="5" id="message"></textarea>
+        </div>
+        <div class="d-grid gap-2 col-6 mx-auto" style="margin: 10px;">
+          <button class="btn btn-success" type="submit">Enviar</button>
+        </div>
+      </form>
+    </div>
+    <div class="info-contact">
+      <div class="address">
+        <h4><i class="bi bi-geo-alt-fill"></i>  Dirección</h4>
+        <p>9863 - 9867 Calle del Sol,.<br>Ciudad Ficticia, FC09 99CF, <br>Pais imaginario</p>
+      </div>
+      <div class="phones">
+        <h4><i class="bi bi-telephone-fill"></i>  Teléfonos</h4>
+        <p></i> +1 800 603 6035</p>
+      </div>
+      <div class="email">
+        <h4><i class="bi bi-envelope-at-fill"></i>  Email</h4>
+        <p><i class="fas fa-envelope"></i> neypastasplace@gmail.com</p>
+      </div>
+    </div>
+  </div>
 </body>
 <footer>
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center">
-        <span>Todas las imágenes utilizadas son cortesía de <a href="https://www.freepik.es">Freepik</a>.</span>
+        <span>Todas las imágenes utilizadas son cortesía de <a href="https://www.freepik.es/foto-gratis/persona-primer-plano-delantal-rojo-fondo-oscuro_5628335.htm#from_view=detail_alsolike">Freepik</a> </span>
       </div>
     </div>
   </div>
 </footer>
+
 </html>
