--- a/views/menu.html
+++ b/views/menu.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
       <a class="navbar-brand ms-4" href="../index.html">
         Ney's Pasta Place
