--- a/css/styles.css
+++ b/css/styles.css
@@ -87,14 +87,14 @@ footer{
     background-position: center;
     background-repeat: no-repeat; /* Evita la repetición de la imagen */
     margin: 0;
-    padding: 0;
-    background-color: black;
+padding: 0;
+    background-color: black; 
     color: #efebdc;
 }
 .formulario{
     height:80%;
     background-color: #d5cfbf;
-    margin-top: 10px;
+    margin-top: 50px;
     margin-bottom: 10px;
     color: black;
 }
@@ -111,14 +111,15 @@ form {
     width: 100%;
     display: flex;
     flex-direction: row;
-    margin-top: 20px;
+    margin-top: 60px;
+    margin-bottom: 60px;
   }
 
   .info-contact .address,
   .info-contact .phones,
   .info-contact .email {
     flex: 1;
-    margin-right: 30px;
+    margin-right: 20px;
   }
 
   .info-contact h4{
