--- a/css/styles.css
+++ b/css/styles.css
@@ -132,3 +132,16 @@ form {
     font-size: 15px;
     text-align: center;
   }
+
+  .content-menu{
+    align-items: center;
+    justify-content: center;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+
+  .card-text {
+    font-size: 15px;
+  }
