--- a/views/menu.html
+++ b/views/menu.html
@@ -37,152 +37,198 @@
     </div>
   </nav>
   <div class="content-menu col-md-12">
-    <div class="row row-cols-1 row-cols-md-5 g-5">
-      <div class="col">
-        <div class="card h-100">
-          <img src="/images/pastas_dos.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Pastas Dal Giorno</h5>
-            <p class="card-text">Pastas frescas del dia con ajos ahumados, pancetta y portobello salteado con un toque de pomodoro.</p>
+    <div class="content-submenu">
+      <h1>Pastas en salsas</h1>
+      <div class="row row-cols-1 row-cols-md-5 g-5">
+        <div class="col">
+          <div class="card h-100">
+            <div class="image-container">
+            <img src="../images/dal_giorgo.jpg" class="card-img-top" alt="...">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Pastas Dal Giorno</h5>
+              <p class="card-text">Pastas frescas del dia con ajos ahumados, pancetta y portobello salteado con un toque
+                de pomodoro.</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">$50.000</small>
+            </div>
           </div>
-          <div class="card-footer">
-            <small class="text-muted">$50.000</small>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <div class="image-container">
+            <img src="../images/bolognesa.jpg" class="card-img-top" alt="...">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Pastas Bolognesa</h5>
+              <p class="card-text">Pastas en salsa clasica tradicional de tomates y carne molida.</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">$45.000</small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <div class="image-container">
+            <img src="../images/primavera.jpg" class="card-img-top" alt="...">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Pastas Primavera</h5>
+              <p class="card-text">Pastas con salsa en aceite de oliva, tomate frescos, champignones, brocolli, zuccini
+                y berenjena.</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">$55.000</small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <div class="image-container">
+            <img src="../images/pomodoro.jpg" class="card-img-top" alt="...">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Pastas Pomodoro</h5>
+              <p class="card-text">Pastas en salsa clasica tradicional de tomates y albahaca.</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">$40.000</small>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="/images/pastas_dos.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Pastas Bolognesa</h5>
-            <p class="card-text">Pastas en salsa clasica tradicional de tomates y carne molida.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">$45.000</small>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="/images/pastas_dos.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Pastas Primavera</h5>
-            <p class="card-text">Pastas con salsa en aceite de oliva, tomate frescos, champignones, brocolli, zuccini y berenjena.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">$55.000</small>
+    </div>
+    <br>
+    <div class="content-submenu">
+      <h1>Pastas Rellenas</h1>
+      <div class="row row-cols-1 row-cols-md-5 g-5">
+
+        <div class="col">
+          <div class="card h-100">
+            <div class="image-container">
+            <img src="../images/ravioli_carne.jpg" class="card-img-top" alt="...">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Ravioli de Carne</h5>
+              <p class="card-text">Elige el relleno de tu preferencia y acompañalos con salsa napolitana, pomodoro o
+                alfredo.</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">$54.000</small>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="/images/pastas_dos.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Pastas Pomodoro</h5>
-            <p class="card-text">Pastas en salsa clasica tradicional de tomates y albahaca.</p>
+        <div class="col">
+          <div class="card h-100">
+            <div class="image-container">
+            <img src="../images/ravioli_ricotta.jpg" class="card-img-top" alt="...">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Ravioli de Ricotta</h5>
+              <p class="card-text">Elige el relleno de tu preferencia y acompañalos con salsa napolitana, pomodoro o
+                alfredo.</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">$54.000</small>
+            </div>
           </div>
-          <div class="card-footer">
-            <small class="text-muted">$40.000</small>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <div class="image-container">
+            <img src="../images/maxresdefault.jpg" class="card-img-top" alt="...">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Crostoni Pomodoro</h5>
+              <p class="card-text">Pañuelos de pasta rellenos con salteado de champinognones portobello, porcini y
+                crimini.</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">$59.000</small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <div class="image-container">
+            <img src="../images/pasta_negra.png" class="card-img-top" alt="...">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Involtini Neri Di Sepia</h5>
+              <p class="card-text">Pasta negra de tinta de calamar rellena de cangreja, trozos de mero, salsa arrabiata
+                y
+                chipirones salteados al ajillo..</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">$40.000</small>
+            </div>
           </div>
         </div>
       </div>
     </div><br>
-    <div class="row row-cols-1 row-cols-md-5 g-5">
-      <div class="col">
-        <div class="card h-100">
-          <img src="/images/pastas_dos.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Ravioli de Carne</h5>
-            <p class="card-text">Elige el relleno de tu preferencia y acompañalos con salsa napolitana, pomodoro o alfredo.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">$54.000</small>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="/images/pastas_dos.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Ravioli de Ricotta</h5>
-            <p class="card-text">Elige el relleno de tu preferencia y acompañalos con salsa napolitana, pomodoro o alfredo.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">$54.000</small>
+    <div class="content-submenu">
+      <h1>Lasagnas</h1>
+      <div class="row row-cols-1 row-cols-md-5 g-5">
+        <div class="col">
+          <div class="card h-100">
+            <div class="image-container">
+            <img src="../images/lasagna_bolonesa.jpg" class="card-img-top" alt="...">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Lasagna Bolognesa</h5>
+              <p class="card-text">La tradicional con capas de pasta, queso, mozarrella y salda bolognesa.</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">$38.000</small>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="/images/pastas_dos.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Crostoni Pomodoro</h5>
-            <p class="card-text">Pañuelos de pasta rellenos con salteado de champinognones portobello, porcini y crimini.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">$59.000</small>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="/images/pastas_dos.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Involtini Neri Di Sepia</h5>
-            <p class="card-text">Pasta negra de tinta de calamar rellena de cangreja, trozos de mero, salsa arrabiata y chipirones salteados al ajillo..</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">$40.000</small>
+        <div class="col">
+          <div class="card h-100">
+            <div class="image-container">
+            <img src="../images/lasagna-de-pollo.jpg" class="card-img-top" alt="...">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Lasagna De La Casa</h5>
+              <p class="card-text">Bolognesa rústica con laminas de portobello, cubos de pollo salteados al pesto,
+                burrata
+                de bufalo y terminada al horno de leña.</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">$60.000</small>
+            </div>
           </div>
         </div>
-      </div>
-    </div><br>
-    <div class="row row-cols-1 row-cols-md-5 g-5">
-      <div class="col">
-        <div class="card h-100">
-          <img src="/images/pastas_dos.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Lasagne Bolognesa</h5>
-            <p class="card-text">La tradicional con capas de pasta, queso, mozarrella y salda bolognesa.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">$38.000</small>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="/images/pastas_dos.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Lasagne De La Casa</h5>
-            <p class="card-text">Bolognesa rústica con laminas de portobello, cubos de pollo salteados al pesto, burrata de bufalo y terminada al horno de leña.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">$60.000</small>
+        <div class="col">
+          <div class="card h-100">
+            <div class="image-container">
+            <img src="../images/lasagna-champinones.jpg" class="card-img-top" alt="...">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Lasagna tres quesos y Champignones</h5>
+              <p class="card-text">Con salsa funghi, queso mozarrella, gouda y parmesano.</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">$59.000</small>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="/images/pastas_dos.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Lasagne tres quesos y Champignones</h5>
-            <p class="card-text">Con salsa funghi, queso mozarrella, gouda y parmesano.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">$59.000</small>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="/images/pastas_dos.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Lasagne Giuseppe Verdi</h5>
-            <p class="card-text">Capas de pasta verde, bolognesa rústica, mozarella y tomate grillado al horno de leña.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">$55.000</small>
+        <div class="col">
+          <div class="card h-100">
+            <div class="image-container">
+            <img src="../images/lasagna-verde.png" class="card-img-top" alt="...">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Lasagna Giuseppe Verdi</h5>
+              <p class="card-text">Capas de pasta verde, bolognesa rústica, mozarella y tomate grillado al horno de
+                leña.
+              </p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">$55.000</small>
+            </div>
           </div>
         </div>
       </div>
@@ -198,4 +244,5 @@
     </div>
   </div>
 </footer>
+
 </html>
